<resources>
    <string name="app_name">Daily To Do</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="just_an_image">Just an image</string>
    <string name="floating_action_button">Floating action button</string>
    <string name="todo_name">Todo name</string>
    <string name="important_task">Important task</string>
    <string name="just_floating_action_button">Just floating action button</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date_created">Sort by date created</string>
    <string name="delete_completed_tasks">Delete completed tasks</string>
    <string name="hide_completed_todo">Hide completed todo</string>
    <string name="created_at">Created at %s</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="confirm_deletion_message">Confirm Deletion</string>
    <string name="cancel">Cancel</string>
    <string name="delete_category">Delete Category</string>
    <string name="create_new_category">Create new Category</string>
    <string name="delete">Delete</string>
    <string name="delete_warning">Deleting this category will remove all your tasks. Do you confirm?</string>
    <string name="yes">YES</string>
    <string name="scheduled_for">Scheduled for %s  %s</string>
    <string name="date_and_time"> %s %s</string>
    <string name="successful_deletion_message"> Deleted successfully</string>
    <string name="alert_dialog_message">Do you really want to delete? You  cannot get them back</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="send_feedback">Send feedback</string>
    <string name="feedback_summary">Report technical issues or suggest new features by clicking here</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="created_date_and_time">Created date and time</string>
    <string name="april_8_2022_12_36">April 8, 2022 12:36</string>
    <string name="due_date_and_time">Due date and time</string>
    <string name="what_do_you_want_to_do">What do you want to do?</string>
    <string name="on_what_date_will_it_be_achieved">On what date will it be achieved?</string>
    <string name="what_time_will_it_be_done">What time do you want to start it?</string>
    <string name="add_a_task">Add a task</string>
    <string name="delete_todo">Delete todo</string>
    <string name="search_todo">Search todo</string>
    <string name="mark_todo_as_completed">Mark todo as completed</string>
    <string name="add_todo_instructions">add todo instructions</string>
    <string name="delete_todo_instructions">delete todo instructions</string>
    <string name="search_todo_instructions">search todo instructions</string>
    <string name="mark_as_completed_instructions">mark as completed instructions</string>
    <string name="instructions">Instructions</string>
    <string name="empty_todo">Your todo list is empty. Click on the + sign at the bottom right to add a task</string>
    <string name="set_notification_sound">Set notification sound</string>
    <string name="how_long_will_it_last">How long will it last?</string>

    <string name="ad_banner">ca-app-pub-3940256099942544/6300978111</string>

    <string name="theme">Theme</string>
    <string name="theme_preference_key">theme_preference</string>
    <string name="select_theme">Choose a theme</string>
    <string name="system_theme">System Default</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="auto_battery_mode">Auto Battery Dark Mode</string>
    <string name="night_auto_time">Night auto time</string>
    <string name="system_default">system</string>
    <string name="light">light</string>
    <string name="dark">dark</string>
    <string name="night_auto">time</string>
    <string name="battery">battery</string>
    <string name="cancel_notification">Cancel</string>
    <string name="stop_ringtone">Stop ringtone</string>

    <!-- Preference Titles -->
    <string name="ui">UI</string>
    <string name="dark_mode">Theme</string>
    <string name="dark_mode_def_value">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="my_notes_list">My notes list</string>
    <string name="add_notes">Add notes</string>
    <string name="note">Note</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="your_note_list_is_empty">Your note list is empty! Click on the + sign at the bottom right to add a note.</string>
    <string name="take_notes">Take notes</string>

    <!-- Repeating interval -->
    <string name="daily">Daily</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="set_notification_sound_optional">Set notification sound(optional)</string>
    <string name="timer_completed_text">00:00:00:00</string>
    <string name="floating_button_icon">Floating button icon</string>
    <string name="pick_image">Pick image</string>
    <string name="pick_color">Pick color</string>
    <string name="add_category">Add category</string>

    <string-array name="repeat_interval">
        <item>@string/daily</item>
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
        <item>@string/sunday</item>
    </string-array>
</resources>