<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_note"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/sort_todo"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/sort_by_name"
                android:title="@string/sort_by_name" />

            <item
                android:id="@+id/sort_by_date_created"
                android:title="@string/sort_by_date_created" />
        </menu>

    </item>

    <item
        android:id="@+id/setting"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>