<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="general"
        app:title="General">


        <ListPreference
            app:defaultValue="@string/dark_mode_def_value"
            app:dialogTitle="@string/select_theme"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_entry_values"
            app:key="@string/theme"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="version"
            app:summary="1.0"
            app:title="Build version" />


    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="about"
        app:title="Help">

        <Preference
            app:key="feedback"
            app:summary="@string/feedback_summary"
            app:title="@string/send_feedback" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="follow"
        app:title="Let's be friends">

        <Preference
            app:key="facebook"
            app:title="Facebook">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://web.facebook.com/gada.esperant/" />
        </Preference>


        <Preference
            app:key="linkedin"
            app:title="LinkedIn">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.linkedin.com/in/esp%C3%A9rant-gada-b88469208/" />
        </Preference>

        <Preference
            app:key="Twitter"
            app:title="Twitter">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://twitter.com/EsperantGada" />

        </Preference>

        <Preference
            app:key="whatsapp"
            app:title="WhatsApp">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://wa.me/+22997756877" />
        </Preference>

        <Preference
            app:key="instagram"
            app:title="Instagram">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.instagram.com/esperantgada/" />
        </Preference>

        <Preference
            app:key="tiktok"
            app:title="Tiktok">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://vm.tiktok.com/ZML4tm6rE/" />
        </Preference>

        <Preference
            app:key="medium"
            app:title="Medium">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://medium.com/@esperantgada" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>