<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddEditTodoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/todo_name_edit_tex"
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/todo_name"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:hint="@string/todo_name"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />


        </com.google.android.material.textfield.TextInputLayout>



        <CheckBox
            android:id="@+id/important_todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/important_task"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/date_created_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Date created" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="18dp"
        android:contentDescription="@string/just_floating_action_button"
        android:src="@drawable/ic_check_mark"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,ImageContrastCheck,RedundantDescriptionCheck" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>